ufw (0.24) UNRELEASED; urgency=low

  * debian/rules: check for 'nocheck' in DEB_BUILD_OPTIONS
  * debian/postrm: don't fail if iptables or ip6tables fails (LP: #278670)
  * fix typo in error message (LP: #280348)

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 29 Sep 2008 13:43:11 -0500

ufw (0.23) intrepid; urgency=low

  * show protocol in status when no ports are specified (LP: #263308)
  * update after*.rules when setting default policy (LP: #273278)
  * give useful message when trying to delete a non-existent rule (LP: #251136)
  * don't print useless newlines
  * add 'translations' support to Makefile (but don't use it in build yet)
  * updated README for advanced usage
  * updated TODO
  * References
    LP: #275984

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 29 Sep 2008 11:52:53 -0500

ufw (0.22) intrepid; urgency=low

  * fix confusing output of 'app update' command (LP: #261932)
  * only reload during 'app update' if the profile name is used in
    the current ruleset (LP: #261323)
  * don't reload user rules if not enabled and don't toggle ENABLED=yes if
    failure in starting the firewall (LP: #262451)
  * don't traceback if /proc not mounted (LP: #268084)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 27 Aug 2008 11:51:14 -0500

ufw (0.21) intrepid; urgency=low

  * add confirmation on enable when running under ssh (LP: #253840)
  * don't reload the firewall on 'app update' when running under ssh
  * update ufw.pot
  * fix some pygettext errors
  * warn if profile name is found in /etc/services
  * don't delete application rules when the action doesn't match
    (LP: #260881)
  * add reload command
  * added debian/triggers and update debian/postinst for use with dpkg
    triggers (thanks Colin Watson for the suggestion)
  * add 'app update all' command
  * update man page for reload and 'app update all'

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 18 Aug 2008 20:22:32 -0400

ufw (0.20) intrepid; urgency=low
